--- a/index.html
+++ b/index.html
@@ -56,79 +56,367 @@
   <ul>
     <li>
       <h2>
-        <a href="/promocao-xblue-aproveite/">XBLUE funciona? - PRODUTO ORIGINAL | Nova Fórmula Exclusiva</a>
+        <a href="/xblue-para-que-serve-onde-comprar/">XBlue: Promoção R$ 97,00 Só Hoje</a>
       </h2>
-      <p>20/08/2021</p>
+      <p>21/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/lift-cha-adquira-o-seu/">Compre com Desconto - Lift Chá</a>
+        <a href="/promocao-lift-cha/">[CONFIRA] LIFT CHÁ</a>
       </h2>
-      <p>20/08/2021</p>
+      <p>21/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/site-blindado-libid-xtreme-caps/">Comprar com Garantia → Libid Xtreme Caps</a>
+        <a href="/libidxtreme-caps-compre-com-garantia/">Compre com Garantia → Libid Xtreme Caps</a>
       </h2>
-      <p>20/08/2021</p>
+      <p>21/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/pague-menos-iqagenda/">IQ Agenda disponível (60% de Desconto)</a>
+        <a href="/iqagenda-promocao-imperdivel/">IQ Agenda: Últimas Vagas 60% de Desconto‎ Apenas R$ 197,00 ao Mês</a>
       </h2>
-      <p>20/08/2021</p>
+      <p>21/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/acesso-imediato-instaboom/">Pague Menos → Instaboom</a>
+        <a href="/site-blindado-instaboom/">[PROMOÇÃO] → INSTABOOM</a>
       </h2>
-      <p>20/08/2021</p>
+      <p>21/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/promocao-idioma-felino-somente-hoje/">Compra Segura - IDIOMA FELINO</a>
+        <a href="/idiomafelino-funciona/">Idioma Felino → (Promoção Incrível)</a>
       </h2>
-      <p>20/08/2021</p>
+      <p>21/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/hotblue-caps-onde-comprar-para-que-serve/">HOTBLUE CAPS Funciona? |【Nova Fórmula Natural】</a>
+        <a href="/super-oferta-hot-blue-caps/">Comprar com Garantia - HotBlue Caps</a>
       </h2>
-      <p>20/08/2021</p>
+      <p>21/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/comprar-com-garantia-hidraliso-alisante-de-chuveiro/">Hidraliso funciona? → [Preço Promocional por tempo limitado]</a>
+        <a href="/o-que-e-onde-comprar-hidraliso/">[PROMOÇÃO] - HIDRALISO - ALISANTE DE CHUVEIRO</a>
       </h2>
-      <p>20/08/2021</p>
+      <p>21/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/guia-do-score-e-bom/">[VEJA!] SCORE EM 7 DIAS</a>
+        <a href="/promocao-guia-do-score-aproveite/">Compre com Garantia - GUIA DO SCORE 7 DIAS</a>
       </h2>
-      <p>20/08/2021</p>
+      <p>21/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/atencao-growtizze/">GROWTIZZE funciona? | (Aprenda com este Método Simplificado)</a>
+        <a href="/growtizze-e-bom/">Growtizze Com Menor Preço</a>
       </h2>
-      <p>20/08/2021</p>
+      <p>21/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/confira-futebol-trade/">[CONFIRA!] FUTEBOL TRADE - COM LUCAS TYLTY</a>
+        <a href="/futebol-trade-com-lucas-tylty-compra-segura/">FUTEBOL TRADE funciona? - De R$ 1997,00 Por apenas R$ 493,00 na promoção</a>
       </h2>
-      <p>20/08/2021</p>
+      <p>21/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/compre-com-desconto-fornecedores-restritos/">Fornecedores Restritos disponível (75% De Desconto)</a>
+        <a href="/desconto-fornecedores-restritos-compre/">Site Blindado - Fornecedores Restritos</a>
       </h2>
-      <p>20/08/2021</p>
+      <p>21/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/acesso-seguro-formula-digitadoronline/">Fórmula Digitador Online - Preço Promocional por TEMPO LIMITADO</a>
+        <a href="/promocao-formula-digitador-online-somente-hoje/">FÓRMULA DIGITADOR ONLINE → (Parcelamento em 11x no cartão)</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-formuladesperte-milionario-compre/">FÓRMULA DESPERTE MILIONÁRIO com Desconto</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/folixil-compra-segura/">Folixil Funciona? | [Compre 67% OFF]</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/como-funciona-o-fitlucrativo/">FIT Lucrativo funciona? | [+ Bônus Incrível]</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/adquira-o-seu-fertilcaps/">FERTIL CAPS Funciona? (Saiba Mais Aqui)</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/duratrina-com-desconto-compre/">[ATENÇÃO] DURATRINA</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/digitador-de-marketing-online-2-0-e-confiavel/">DIGITADOR DE MARKETING ONLINE 2.0 Até 60% OFF - DESCONTO</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/detox3d-acesso-imediato/">Detox 3D disponível com 48% de desconto</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/curso-destinorico-oferece-desconto/">Comprar com Garantia - DESTINO RICO</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-com-seguranca-clean-caps/">CLEAN CAPS funciona? |【Apenas R$ 197,00 Por Tempo Limitado】</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/centralizze-menor-preco/">[CONFIRA!] CENTRALIZZE</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-centralbots-agora-com-desconto/">CentralBots: Fácil e Descomplicado por apenas R$ 69,00 ao Mês</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/compre-com-garantia-canvapara-negocios/">CANVA PARA NEGÓCIOS → Comece a estudar agora</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/bi-zen-promocao/">[PROMOÇÃO] → BI-ZEN</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/compre-com-desconto-air-sleep/">AIR SLEEP Com 32% de desconto! Compre agora!</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/agenciagram-e-bom/">AGÊNCIAGRAM funciona? →【Últimas Vagas com Desconto‎ apenas R$ 29,00 ao Mês】</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-academiademilionarios-compre/">[ACESSE] ACADEMIA DE MILIONÁRIOS</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/360-slim-com-desconto-compre/">Comprar 360Slim agora</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-macrame-passoapasso-imperdivel/">Compre com Desconto → MACRAMÊ PASSO A PASSO</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/confira-magnifique-paris/">Compra Segura | Magnifique Paris</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/x-potent-funciona-produto-original-formula-natural/">X Potent Funciona? | Parcele em 12x</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/xanimal-comprar-com-seguranca/">[CUIDADO!] XAnimal</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/curso-turbobinary-comprar-com-seguranca/">Compre com Desconto | CURSO TURBO BINARY</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-com-garantia-top-fornecedores-ocultos/">TOP FORNECEDORES OCULTOS Funciona? | Aprenda o Método</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/thors-hammer-gel-menor-preco/">Site Blindado | THOR'S HAMMER GEL</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-super-tesao-devaca-aproveite/">Compra Segura → SUPER TESÃO DE VACA</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/veja-sinedrol/">Promoção Sinedrol [IMPERDÍVEL]</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-silkskin-creme-para-estrias-agora/">[PROMOÇÃO] - SILK SKIN</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/veja-subutramin/">PRODUTO ORIGINAL - Subutramin</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/conheca-o-segredos-do-homeoffice/">Segredos do Home Office funciona? Cursos Online</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-comprar-segredo=daloto/">Promoção Segredo da Loto [APROVEITE]</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/manualdoscore-com-desconto/">Pague Menos - SCORE MANUAL</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/robotmillion-compra-segura/">Compre com Desconto | Robot Million</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-compre-robo-pipocodotrovao/">Robô Pipoco do Trovão | Desconto Exclusivo De 85%</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/como-funciona-o-curso-robomilionario/">Promoção ROBÔ MILIONÁRIO [APROVEITE]</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-comprar-mamcaps/">Mam Caps disponível com 10% De Desconto</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/site-blindado-mapas-mentais-carreiraspoliciais/">Promoção MAPAS MENTAIS CARREIRAS POLICIAIS [IMPERDÍVEL]</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/mbguitaracademy-e-confiavel/">Comprar MB GUITAR ACADEMY</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/melannunage-compra-segura/">Produto Original | Melannun Age</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/metodo-monster-e-bom-comprar-online/">Método Monster funciona? |【SAIBA MAIS】</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/metodotrader-milionario-funciona-curso-completo-online/">MÉTODO TRADER MILIONÁRIO disponível com 90% de Desconto</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/net-milionario-compre-com-garantia/">NET MILIONÁRIO funciona? (Por apenas R$ 87,00 NA PROMOÇÃO)</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/power-capsturbo-onde-comprar-o-que-e/">PowerCaps Turbo funciona? - Produto Original | Fórmula Natural</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/profissao-homeoffice-compre-com-desconto/">PROFISSÃO HOME OFFICE oferece 10% de Desconto</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/remunera-365-2-0-matricule-se-hoje-10-off/">Remunera 365 2.0 funciona? → [Pague Menos]</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/roboafiliado-acesso-imediato/">Robô Afiliado → (Por apenas R$ 147,00 com desconto)</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/roboda-loto-acesso-imediato/">ROBÔ DA LOTO funciona? →【Compre com 10% de Desconto】</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/acesso-imediato-robo-investidor-trader/">ROBÔ INVESTIDOR TRADER com Menor Preço</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-folixil-agora-com-desconto/">FOLIXIL Funciona? 【Compra Segura】</a>
       </h2>
       <p>20/08/2021</p>
     </li>
@@ -140,7 +428,73 @@
     </li>
     <li>
       <h2>
-        <a href="/comprar-folixil-agora-com-desconto/">FOLIXIL Funciona? 【Compra Segura】</a>
+        <a href="/acesso-seguro-formula-digitadoronline/">Fórmula Digitador Online - Preço Promocional por TEMPO LIMITADO</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/compre-com-desconto-fornecedores-restritos/">Fornecedores Restritos disponível (75% De Desconto)</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/confira-futebol-trade/">[CONFIRA!] FUTEBOL TRADE - COM LUCAS TYLTY</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/atencao-growtizze/">GROWTIZZE funciona? | (Aprenda com este Método Simplificado)</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/guia-do-score-e-bom/">[VEJA!] SCORE EM 7 DIAS</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-com-garantia-hidraliso-alisante-de-chuveiro/">Hidraliso funciona? → [Preço Promocional por tempo limitado]</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/hotblue-caps-onde-comprar-para-que-serve/">HOTBLUE CAPS Funciona? |【Nova Fórmula Natural】</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-idioma-felino-somente-hoje/">Compra Segura - IDIOMA FELINO</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/acesso-imediato-instaboom/">Pague Menos → Instaboom</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/pague-menos-iqagenda/">IQ Agenda disponível (60% de Desconto)</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/site-blindado-libid-xtreme-caps/">Comprar com Garantia → Libid Xtreme Caps</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/lift-cha-adquira-o-seu/">Compre com Desconto - Lift Chá</a>
       </h2>
       <p>20/08/2021</p>
     </li>
@@ -243,6 +597,12 @@
     <li>
       <h2>
         <a href="/acesso-imediato-magnifique-paris/">Pague Menos | MAGNIFIQUE PARIS</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-xblue-aproveite/">XBLUE funciona? - PRODUTO ORIGINAL | Nova Fórmula Exclusiva</a>
       </h2>
       <p>20/08/2021</p>
     </li>
