--- a/index.html
+++ b/index.html
@@ -56,79 +56,367 @@
   <ul>
     <li>
       <h2>
-        <a href="/xblue-para-que-serve-onde-comprar/">XBlue: Promoção R$ 97,00 Só Hoje</a>
+        <a href="/xblue-adquira-agora-o-seu/">Produto Original | XBLUE</a>
       </h2>
-      <p>21/08/2021</p>
+      <p>22/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/promocao-lift-cha/">[CONFIRA] LIFT CHÁ</a>
+        <a href="/liftcha-o-que-e-onde-comprar/">[ATENÇÃO!] Lift Chá</a>
       </h2>
-      <p>21/08/2021</p>
+      <p>22/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/libidxtreme-caps-compre-com-garantia/">Compre com Garantia → Libid Xtreme Caps</a>
+        <a href="/libid-xtreme-onde-comprar-para-que-serve/">Como funciona o LIBID XTREME CAPS?</a>
       </h2>
-      <p>21/08/2021</p>
+      <p>22/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/iqagenda-promocao-imperdivel/">IQ Agenda: Últimas Vagas 60% de Desconto‎ Apenas R$ 197,00 ao Mês</a>
+        <a href="/desconto-iqagenda/">IQ Agenda funciona? - Invista no Autoconhecimento</a>
       </h2>
-      <p>21/08/2021</p>
+      <p>22/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/site-blindado-instaboom/">[PROMOÇÃO] → INSTABOOM</a>
+        <a href="/instaboom-promocao-aproveite/">Comprar INSTABOOM agora</a>
       </h2>
-      <p>21/08/2021</p>
+      <p>22/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/idiomafelino-funciona/">Idioma Felino → (Promoção Incrível)</a>
+        <a href="/idioma-felino-vale-a-pena/">Comprar com Garantia | IDIOMA FELINO</a>
       </h2>
-      <p>21/08/2021</p>
+      <p>22/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/super-oferta-hot-blue-caps/">Comprar com Garantia - HotBlue Caps</a>
+        <a href="/hot-blue-caps-compra-segura/">[CONFIRA!] HOTBLUE CAPS</a>
       </h2>
-      <p>21/08/2021</p>
+      <p>22/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/o-que-e-onde-comprar-hidraliso/">[PROMOÇÃO] - HIDRALISO - ALISANTE DE CHUVEIRO</a>
+        <a href="/promocao-hidraliso-alisante-de-chuveiro-somente-hoje/">Hidraliso funciona? | [Produto Original | Nova Fórmula Exclusiva]</a>
       </h2>
-      <p>21/08/2021</p>
+      <p>22/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/promocao-guia-do-score-aproveite/">Compre com Garantia - GUIA DO SCORE 7 DIAS</a>
+        <a href="/comprar-score-em-7-dias-agora-com-desconto/">Compre com Desconto - GUIA DO SCORE 7 DIAS</a>
       </h2>
-      <p>21/08/2021</p>
+      <p>22/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/growtizze-e-bom/">Growtizze Com Menor Preço</a>
+        <a href="/growtizze-acesso-imediato/">Comprar com Segurança | Growtizze</a>
       </h2>
-      <p>21/08/2021</p>
+      <p>22/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/futebol-trade-com-lucas-tylty-compra-segura/">FUTEBOL TRADE funciona? - De R$ 1997,00 Por apenas R$ 493,00 na promoção</a>
+        <a href="/futebol-trade-promocao-so-hoje/">FUTEBOL TRADE disponível com 75% de desconto</a>
       </h2>
-      <p>21/08/2021</p>
+      <p>22/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/desconto-fornecedores-restritos-compre/">Site Blindado - Fornecedores Restritos</a>
+        <a href="/fornecedoresrestritos-compra-segura/">Fornecedores Restritos Funciona? - Bônus Grátis</a>
       </h2>
-      <p>21/08/2021</p>
+      <p>22/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/promocao-formula-digitador-online-somente-hoje/">FÓRMULA DIGITADOR ONLINE → (Parcelamento em 11x no cartão)</a>
+        <a href="/comprar-com-seguranca-formula-digitadoronline/">[ACESSE!] FÓRMULA DIGITADOR ONLINE</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/formuladesperte-milionario-disponivel-com-desconto/">FÓRMULA DESPERTE MILIONÁRIO funciona? | (OFERTA IMBATÍVEL)</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/para-que-serve-folixil/">O que é Folixil e para quem serve?</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-fit-lucrativo-nao-perca/">DESCONTO | Fit Lucrativo</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/adquira-o-seu-fertil-caps/">O que é Fertil Caps e como funciona?</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-compre-duratrina/">DURATRINA Até 61% OFF - Desconto</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/digitadorde-marketingonline-disponivel-com-desconto/">DIGITADOR DE MARKETING ONLINE 2.0 Funciona? | Resultados Reais</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/detox3d-para-que-serve-onde-comprar/">Como funciona o DETOX 3D?</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/destino-rico-vale-a-pena/">DESTINO RICO | Aproveite a promoção R$ 297,00</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/clean-caps-com-desconto/">CLEAN CAPS Funciona? Produto Original | Fórmula 100% Natural</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/centralizze-com-desconto-compre/">CENTRALIZZE funciona? - (Fácil e Descomplicado)</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-comprar-centralbots/">[ACESSO SEGURO] CentralBots</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-canva-para-negocios/">CANVA PARA NEGÓCIOS disponível com 60% de desconto</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/bizen-comprar-com-seguranca/">BI-ZEN -【Produto Original | Nova Fórmula Exclusiva】</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/airsleep-comprar-com-seguranca/">Comprar com Segurança → Air Sleep</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/confira-agenciagram/">AGÊNCIAGRAM Funciona? -【Edição Limitada】</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-compre-academia-de-milionarios/">Academia de Milionários funciona? Do Básico ao Expert</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/compre-agora-o-seu-360slim/">360 Slim【Bônus Grátis】</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-macrame-passo-a-passo-aproveite/">MACRAMÊ PASSO A PASSO funciona? - [De R$ 197,90 Por R$ 67,00 parcelado em 9x no cartão]</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-compre-magnifiqueparis/">Promoção Magnifique Paris [IMPERDÍVEL]</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/x-potent-site-blindado/">XPOTENT Até 29% OFF | DESCONTO</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/x-animal-onde-comprar/">XANIMAL Funciona? |【Parcelamento em 12x no cartão】</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/compra-segura-cursoturbobinary/">DESCONTO - Turbo Binary</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/pague-menos-topfornecedores-ocultos/">Top Fornecedores Ocultos com 58% de desconto! COMPRE AGORA!</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-thor-hammer-gel-comprar/">Comprar Thors Hammer Gel agora</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/supertesaodevaca-onde-comprar/">Pague Menos | Super Tesão de Vaca</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/conheca-o-sinedrol/">SINEDROL funciona? | (Compre Agora | Fórmula Inédita)</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/confira-silkskin/">Silk Skin - Creme para Estrias disponível com 60% de Desconto</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-subutramin/">SIBUTRAMIN funciona? → [Tudo Sobre o Produto | Nova Fórmula Revolucionária]</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-segredos-do-homeoffice-imperdivel/">Compre com Desconto → Segredos do Home Office</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/segredo=daloto-e-bom/">SEGREDO DA LOTO Funciona? -【Acessar com Segurança】</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-scoremanual-desconto/">DESCONTO → Score Manual</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/robotmillion-promocao-so-hoje/">Robot Million 2.0 Funciona? Matricule-se HOJE por apenas R$ 147,00/Mês</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-com-garantia-robopipocodotrovao/">[ACESSE!] ROBÔ PIPOCO DO TROVÃO</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-robo-milionario-agora-com-desconto/">Compra Segura → ROBÔ MILIONÁRIO</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-mam-caps-agora/">Comprar com Segurança - MAM CAPS</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/mapas-mentais-carreiras-policiais-compre-com-garantia/">MAPAS MENTAIS - CARREIRAS POLICIAIS funciona? - (Acessar Página com Segurança)</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/veja-mb-guitar-academy/">MB GUITAR ACADEMY ESSENCIAL com 50% de desconto! Compre agora!</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/compre-o-seu-melannunage/">Compra Segura - MELANNUN AGE</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-metodo-monster-compre/">Pague Menos → MÉTODO MONSTER</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-com-garantia-metodo-tradermilionario/">MÉTODO TRADER MILIONÁRIO Funciona? → [SUPER PROMOÇÃO]</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/cuidado-netmilionario/">Promoção Net Milionário [SÓ HOJE]</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/powercapsturbo-e-bom-compre-com-seguranca/">Power Caps Turbo funciona? PRODUTO ORIGINAL | Fórmula Revolucionária</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/compre-com-desconto-profissao-homeoffice/">Profissão Home Office Funciona? →【Matricule-se HOJE】</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/remunera365-2-0-oferece-desconto/">REMUNERA 365: Todos os Detalhes</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/compra-segura-roboafiliado/">Robô Afiliado Funciona? - Resultados Reais</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/acesso-imediato-robo-daloto/">Comprar Robô da Loto AGORA</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-roboinvestidortrader-comprar/">Robô Investidor Trader com 70% de desconto</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/folixil-compra-segura/">Folixil Funciona? | [Compre 67% OFF]</a>
       </h2>
       <p>21/08/2021</p>
     </li>
@@ -140,7 +428,73 @@
     </li>
     <li>
       <h2>
-        <a href="/folixil-compra-segura/">Folixil Funciona? | [Compre 67% OFF]</a>
+        <a href="/promocao-formula-digitador-online-somente-hoje/">FÓRMULA DIGITADOR ONLINE → (Parcelamento em 11x no cartão)</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-fornecedores-restritos-compre/">Site Blindado - Fornecedores Restritos</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/futebol-trade-com-lucas-tylty-compra-segura/">FUTEBOL TRADE funciona? - De R$ 1997,00 Por apenas R$ 493,00 na promoção</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/growtizze-e-bom/">Growtizze Com Menor Preço</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-guia-do-score-aproveite/">Compre com Garantia - GUIA DO SCORE 7 DIAS</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/o-que-e-onde-comprar-hidraliso/">[PROMOÇÃO] - HIDRALISO - ALISANTE DE CHUVEIRO</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/super-oferta-hot-blue-caps/">Comprar com Garantia - HotBlue Caps</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/idiomafelino-funciona/">Idioma Felino → (Promoção Incrível)</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/site-blindado-instaboom/">[PROMOÇÃO] → INSTABOOM</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/iqagenda-promocao-imperdivel/">IQ Agenda: Últimas Vagas 60% de Desconto‎ Apenas R$ 197,00 ao Mês</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/libidxtreme-caps-compre-com-garantia/">Compre com Garantia → Libid Xtreme Caps</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-lift-cha/">[CONFIRA] LIFT CHÁ</a>
       </h2>
       <p>21/08/2021</p>
     </li>
@@ -243,6 +597,12 @@
     <li>
       <h2>
         <a href="/confira-magnifique-paris/">Compra Segura | Magnifique Paris</a>
+      </h2>
+      <p>21/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/xblue-para-que-serve-onde-comprar/">XBlue: Promoção R$ 97,00 Só Hoje</a>
       </h2>
       <p>21/08/2021</p>
     </li>
