--- a/index.html
+++ b/index.html
@@ -56,79 +56,367 @@
   <ul>
     <li>
       <h2>
-        <a href="/xblue-adquira-agora-o-seu/">Produto Original | XBLUE</a>
+        <a href="/xblue-onde-comprar-o-que-e/">[ACESSO IMEDIATO] XBLUE</a>
       </h2>
-      <p>22/08/2021</p>
+      <p>23/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/liftcha-o-que-e-onde-comprar/">[ATENÇÃO!] Lift Chá</a>
+        <a href="/comprar-liftcha/">Promoção Lift Chá [APENAS HOJE]</a>
       </h2>
-      <p>22/08/2021</p>
+      <p>23/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/libid-xtreme-onde-comprar-para-que-serve/">Como funciona o LIBID XTREME CAPS?</a>
+        <a href="/libidxtreme-caps-o-que-e-para-que-serve/">O que é LIBIDXTREME e para quem serve?</a>
       </h2>
-      <p>22/08/2021</p>
+      <p>23/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/desconto-iqagenda/">IQ Agenda funciona? - Invista no Autoconhecimento</a>
+        <a href="/cuidado-iq-agenda/">IQ Agenda Funciona? | Matricule-se JÁ por apenas R$ 197,00/Mês</a>
       </h2>
-      <p>22/08/2021</p>
+      <p>23/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/instaboom-promocao-aproveite/">Comprar INSTABOOM agora</a>
+        <a href="/instaboom-promocao-nao-perca/">[CUIDADO] InstaBoom</a>
       </h2>
-      <p>22/08/2021</p>
+      <p>23/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/idioma-felino-vale-a-pena/">Comprar com Garantia | IDIOMA FELINO</a>
+        <a href="/comprar-com-garantia-idiomafelino/">Idioma Felino funciona? - (53% Off)</a>
       </h2>
-      <p>22/08/2021</p>
+      <p>23/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/hot-blue-caps-compra-segura/">[CONFIRA!] HOTBLUE CAPS</a>
+        <a href="/garantia-hotbluecaps-compre/">HotBlue Caps Funciona? - (Acesse o SITE)</a>
       </h2>
-      <p>22/08/2021</p>
+      <p>23/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/promocao-hidraliso-alisante-de-chuveiro-somente-hoje/">Hidraliso funciona? | [Produto Original | Nova Fórmula Exclusiva]</a>
+        <a href="/acesso-seguro-hidraliso-alisante-de-chuveiro/">HIDRALISO - ALISANTE DE CHUVEIRO Com 76% de desconto! COMPRE AGORA!</a>
       </h2>
-      <p>22/08/2021</p>
+      <p>23/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/comprar-score-em-7-dias-agora-com-desconto/">Compre com Desconto - GUIA DO SCORE 7 DIAS</a>
+        <a href="/pague-menos-guia-do-score/">SCORE EM 7 DIAS Até 50% OFF → DESCONTO</a>
       </h2>
-      <p>22/08/2021</p>
+      <p>23/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/growtizze-acesso-imediato/">Comprar com Segurança | Growtizze</a>
+        <a href="/garantia-growtizze-compre/">Comprar com Segurança - Growtizze</a>
       </h2>
-      <p>22/08/2021</p>
+      <p>23/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/futebol-trade-promocao-so-hoje/">FUTEBOL TRADE disponível com 75% de desconto</a>
+        <a href="/cuidado-futebol-trade/">Futebol Trade Funciona? → Melhor Preço</a>
       </h2>
-      <p>22/08/2021</p>
+      <p>23/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/fornecedoresrestritos-compra-segura/">Fornecedores Restritos Funciona? - Bônus Grátis</a>
+        <a href="/confira-fornecedores-restritos/">Site Blindado → Fornecedores Restritos</a>
       </h2>
-      <p>22/08/2021</p>
+      <p>23/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/comprar-com-seguranca-formula-digitadoronline/">[ACESSE!] FÓRMULA DIGITADOR ONLINE</a>
+        <a href="/comprar-formuladigitador-online-agora-com-desconto/">Fórmula Digitador Online → De R$ 147,00 por apenas R$ 79,00 em 11x no cartão</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/formuladesperte-milionario-promocao-aproveite/">Fórmula Desperte Milionário Funciona? - Bônus de R$ 888,00 Exclusivo Hoje</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/adquira-o-seu-folixil/">Folixil funciona? (Nova Fórmula Natural)</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-fitlucrativo/">FIT LUCRATIVO → (Promoção Incrível)</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/para-que-serve-onde-comprar-fertilcaps/">O que é FERTIL CAPS e como funciona?</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-duratrina-somente-hoje/">Duratrina -【Fórmula Revolucionária】</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/digitadorde-marketingonline-vale-a-pena-dicas-e-detalhes/">Site Blindado | DIGITADOR DE MARKETING ONLINE</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/onde-comprar-para-que-serve-detox3d/">Comprar Detox 3D com Desconto</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/destino-rico-promocao-imperdivel/">DESTINO RICO - por apenas R$ 297,00 em 12x no cartão</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-cleancaps-compre/">Clean Caps Com 60% De Desconto</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/confira-centralizze/">Compre com Desconto → Centralizze</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/ultimas-vagas-central-bots/">Compre com Desconto | Central Bots</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/como-funciona-o-canvaparanegocios/">Canva para Negócios Funciona? por apenas R$ 197,00 só hoje</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/acesso-seguro-bizen/">[CUIDADO] BI-ZEN</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/air-sleep-compre-com-desconto/">AIR SLEEP funciona? -【NÃO PERCA O DESCONTO】</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/agenciagram-promocao-aproveite/">[CONFIRA] AGÊNCIAGRAM</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/confira-academiademilionarios/">ACADEMIA DE MILIONÁRIOS funciona? → SAIBA MAIS</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/360-slim-oferece-desconto/">360Slim Com 50% de desconto! COMPRE AGORA!</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/macrame-passoapasso-acesso-seguro/">Macramê Passo a Passo com Desconto</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-magnifiqueparis-so-hoje/">Magnifique Paris Funciona? - [Oferta]</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/x-potent-para-que-serve/">XPotent【Tudo Sobre O Produto | Nova Fórmula 100% Natural】</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/para-que-serve-o-que-e-xanimal/">Comprar com Garantia | X-ANIMAL</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/curso-turbo-binary-vale-a-pena/">Curso Turbo Binary - de R$ 3166,00 por R$ 147,00</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-top-fornecedores-ocultos-somente-hoje/">Top Fornecedores Ocultos com 58% de desconto! Compre agora!</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-thorhammergel-compre/">Comprar THOR HAMMER GEL agora</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/veja-supertesaodevaca/">SUPER TESÃO DE VACA Até 60% OFF | Desconto</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/por-apenas-r-127-00-com-desconto-sinedrol/">Pague Menos | Sinedrol</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/para-que-serve-onde-comprar-silkskin/">DESCONTO - SILK SKIN</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/compre-agora-o-seu-subutramin/">Subutramin |【Parcele em até 12x】</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-com-garantia-segredos-do-homeoffice/">SEGREDOS DO HOME OFFICE Até 90% OFF - Desconto</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/segredo-da-loto-promocao/">SEGREDO DA LOTO (Faça Sua Compra AGORA)</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/cuidado-score-manual/">SCORE MANUAL [+ 6 Bônus]</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/robot-million-2-0-e-bom/">Robot Million em Promoção</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-robo-pipocodotrovao-compre/">Promoção Robô Pipoco do Trovão [NÃO PERCA]</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/curso-robo-milionario-disponivel-com-desconto/">CURSO ROBÔ MILIONÁRIO funciona? →【Parcele em até 12x no cartão】</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/mam-caps-original-nova-formula-natural/">MAM CAPS funciona? → Preço Promocional | 12x no cartão</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/mapas-mentais-carreiras-policiais-compra-segura/">Comprar Mapas Mentais Carreiras Policiais agora</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-mb-guitar-academy-compre/">Comprar MB GUITAR ACADEMY ESSENCIAL agora</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/melannun-age-pague-menos/">Produto Original → MELANNUN AGE</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/metodomonster-vale-a-pena/">Compre com Desconto - MÉTODO MONSTER</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/metodo-trader-milionario-comprar-com-garantia/">Comprar MÉTODO TRADER MILIONÁRIO Com Desconto</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-com-garantia-net-milionario/">NET MILIONÁRIO | NÃO PERCA A PROMOÇÃO</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/compre-com-desconto-powercapsturbo/">POWERCAPS TURBO → [ORIGINAL | Nova Fórmula Exclusiva]</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-compre-profissaohomeoffice/">[VEJA] PROFISSÃO HOME OFFICE</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/conheca-o-remunera-365-2-0/">Comprar com Segurança | Remunera 365 2.0</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-roboafiliado-agora-com-desconto/">Compre com Desconto | ROBÔ AFILIADO</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/pague-menos-robo-da-loto/">ROBÔ DA LOTO com 10% de Desconto</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-roboinvestidortrader-aproveite/">Comprar Robô Investidor Trader com Desconto</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/para-que-serve-folixil/">O que é Folixil e para quem serve?</a>
       </h2>
       <p>22/08/2021</p>
     </li>
@@ -140,7 +428,73 @@
     </li>
     <li>
       <h2>
-        <a href="/para-que-serve-folixil/">O que é Folixil e para quem serve?</a>
+        <a href="/comprar-com-seguranca-formula-digitadoronline/">[ACESSE!] FÓRMULA DIGITADOR ONLINE</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/fornecedoresrestritos-compra-segura/">Fornecedores Restritos Funciona? - Bônus Grátis</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/futebol-trade-promocao-so-hoje/">FUTEBOL TRADE disponível com 75% de desconto</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/growtizze-acesso-imediato/">Comprar com Segurança | Growtizze</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-score-em-7-dias-agora-com-desconto/">Compre com Desconto - GUIA DO SCORE 7 DIAS</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-hidraliso-alisante-de-chuveiro-somente-hoje/">Hidraliso funciona? | [Produto Original | Nova Fórmula Exclusiva]</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/hot-blue-caps-compra-segura/">[CONFIRA!] HOTBLUE CAPS</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/idioma-felino-vale-a-pena/">Comprar com Garantia | IDIOMA FELINO</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/instaboom-promocao-aproveite/">Comprar INSTABOOM agora</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-iqagenda/">IQ Agenda funciona? - Invista no Autoconhecimento</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/libid-xtreme-onde-comprar-para-que-serve/">Como funciona o LIBID XTREME CAPS?</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/liftcha-o-que-e-onde-comprar/">[ATENÇÃO!] Lift Chá</a>
       </h2>
       <p>22/08/2021</p>
     </li>
@@ -243,6 +597,12 @@
     <li>
       <h2>
         <a href="/garantia-compre-magnifiqueparis/">Promoção Magnifique Paris [IMPERDÍVEL]</a>
+      </h2>
+      <p>22/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/xblue-adquira-agora-o-seu/">Produto Original | XBLUE</a>
       </h2>
       <p>22/08/2021</p>
     </li>
