--- a/index.html
+++ b/index.html
@@ -56,79 +56,367 @@
   <ul>
     <li>
       <h2>
-        <a href="/xblue-onde-comprar-o-que-e/">[ACESSO IMEDIATO] XBLUE</a>
+        <a href="/xblue-comprar-com-garantia/">Compra Segura | XBLUE</a>
       </h2>
-      <p>23/08/2021</p>
+      <p>26/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/comprar-liftcha/">Promoção Lift Chá [APENAS HOJE]</a>
+        <a href="/liftcha-compre-com-desconto/">Comprar Lift Chá Com Desconto</a>
       </h2>
-      <p>23/08/2021</p>
+      <p>26/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/libidxtreme-caps-o-que-e-para-que-serve/">O que é LIBIDXTREME e para quem serve?</a>
+        <a href="/libidxtreme-caps-compre-agora-o-seu/">LibidXtreme Caps funciona? -【Detalhes e Preço】</a>
       </h2>
-      <p>23/08/2021</p>
+      <p>26/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/cuidado-iq-agenda/">IQ Agenda Funciona? | Matricule-se JÁ por apenas R$ 197,00/Mês</a>
+        <a href="/conheca-o-iq-agenda/">IQ Agenda com Desconto</a>
       </h2>
-      <p>23/08/2021</p>
+      <p>26/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/instaboom-promocao-nao-perca/">[CUIDADO] InstaBoom</a>
+        <a href="/comprar-instaboom-agora-com-desconto/">Instaboom funciona? | (Treinamento Online apenas R$ 97,00/Mês)</a>
       </h2>
-      <p>23/08/2021</p>
+      <p>26/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/comprar-com-garantia-idiomafelino/">Idioma Felino funciona? - (53% Off)</a>
+        <a href="/desconto-comprar-idiomafelino/">[ACESSO SEGURO] Idioma Felino</a>
       </h2>
-      <p>23/08/2021</p>
+      <p>26/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/garantia-hotbluecaps-compre/">HotBlue Caps Funciona? - (Acesse o SITE)</a>
+        <a href="/hot-blue-caps-o-que-e/">HotBlue Caps → (Todos os Detalhes)</a>
       </h2>
-      <p>23/08/2021</p>
+      <p>26/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/acesso-seguro-hidraliso-alisante-de-chuveiro/">HIDRALISO - ALISANTE DE CHUVEIRO Com 76% de desconto! COMPRE AGORA!</a>
+        <a href="/compre-agora-o-seu-hidraliso-alisante-de-chuveiro/">[ATENÇÃO] HIDRALISO</a>
       </h2>
-      <p>23/08/2021</p>
+      <p>26/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/pague-menos-guia-do-score/">SCORE EM 7 DIAS Até 50% OFF → DESCONTO</a>
+        <a href="/guiadoscore-site-blindado/">Promoção GUIA DO SCORE [SÓ HOJE]</a>
       </h2>
-      <p>23/08/2021</p>
+      <p>26/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/garantia-growtizze-compre/">Comprar com Segurança - Growtizze</a>
+        <a href="/growtizze-e-bom-acessar-a-pagina/">[ACESSO IMEDIATO] Growtizze</a>
       </h2>
-      <p>23/08/2021</p>
+      <p>26/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/cuidado-futebol-trade/">Futebol Trade Funciona? → Melhor Preço</a>
+        <a href="/veja-futebol-trade-com-lucas-tylty/">[ACESSE] FUTEBOL TRADE</a>
       </h2>
-      <p>23/08/2021</p>
+      <p>26/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/confira-fornecedores-restritos/">Site Blindado → Fornecedores Restritos</a>
+        <a href="/desconto-fornecedores-restritos/">Fornecedores Restritos com Menor Preço</a>
       </h2>
-      <p>23/08/2021</p>
+      <p>26/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/comprar-formuladigitador-online-agora-com-desconto/">Fórmula Digitador Online → De R$ 147,00 por apenas R$ 79,00 em 11x no cartão</a>
+        <a href="/formuladigitadoronline-em-promocao/">FÓRMULA DIGITADOR ONLINE em Promoção</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/cuidado-formuladespertemilionario/">Conheça o FÓRMULA DESPERTE MILIONÁRIO</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/folixil-site-blindado/">Comprar com Segurança → FOLIXIL</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/fit-lucrativo-com-desconto/">FIT Lucrativo Com Menor Preço</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-fertil-caps-compre/">Produto Original - Fertil Caps</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/onde-comprar-o-que-e-duratrina/">Produto Original → DURATRINA</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-digitador-de-marketing-online-2-0-com-desconto/">Digitador de Marketing Online funciona? → (Acessar)</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-detox-3d-compre/">Detox 3D disponível com 48% de Desconto</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/destino-rico-promocao-nao-perca/">Destino Rico Em Promoção</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/clean-caps-disponivel-com-desconto/">CLEAN CAPS Com Desconto</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/centralizze-disponivel-com-desconto/">[CUIDADO] CENTRALIZZE</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/central-bots-acesso-imediato/">CentralBots funciona? Do Básico ao Avançado por apenas R$ 69,00 por Mês</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/canvapara-negocios-acesso-imediato/">CANVA PARA NEGÓCIOS Até 60% OFF → Desconto</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/compre-o-seu-bi-zen/">Como funciona o Bi-zen?</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/o-que-e-para-que-serve-air-sleep/">AIR SLEEP Com 32% de desconto</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-compre-agenciagram/">AGÊNCIAGRAM -【OFERTA IMBATÍVEL】</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/como-funciona-o-academia-de-milionarios/">ACADEMIA DE MILIONÁRIOS Até 92% OFF - DESCONTO</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-360slim-agora/">O que é 360 SLIM e para quem serve?</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/como-funciona-o-macrame-passo-a-passo/">Macramê Passo a Passo oferece 80% de Desconto</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/magnifique-paris-promocao-aproveite/">MAGNIFIQUE PARIS |【PRODUTO ORIGINAL | Nova Fórmula Natural】</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/o-que-e-para-que-serve-xpotent/">DESCONTO → XPOTENT</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/xanimal-vale-a-pena-nova-formula/">PRODUTO ORIGINAL | X Animal</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/compra-segura-turbo-binary/">Pague Menos | CURSO TURBO BINARY</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-top-fornecedores-ocultos-so-hoje/">Top Fornecedores Ocultos disponível (58% de Desconto)</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-thors-hammer-gel-aproveite/">Thor Hammer Gel →【Tudo Sobre O Produto | Nova Fórmula Natural】</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/super-tesao-de-vaca-e-confiavel/">SUPER TESÃO DE VACA com 60% De Desconto</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/sinedrol-e-bom-preco-imbativel/">Sinedrol oferece 36% de desconto</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/silk-skin-creme-para-estrias-adquira-o-seu/">Produto Original - Silk Skin - Creme para Estrias</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-subutramin-so-hoje/">[ACESSE] Subutramin</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/segredosdohomeoffice-por-apenas-r-97-00-em-12x-no-cartao/">Comprar com Segurança - SEGREDOS DO HOME OFFICE</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/segredo-da-loto-e-bom/">Compra Segura → Segredo da Loto</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/score-manual-disponivel-desconto/">SCORE MANUAL em Promoção</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/robot-million-2-0-oferece-desconto/">Robot Million com 50% de desconto! Compre agora!</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/acesso-seguro-robo-pipoco-do-trovao/">Robô Pipoco do Trovão funciona? |【De R$ 2200,00 Por R$ 330,00】</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-robomilionario-com-desconto/">CURSO ROBÔ MILIONÁRIO funciona? → [de R$ 997,00 por R$ 297,00]</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/mamcaps-adquira-agora-o-seu/">MAM CAPS funciona? - Pagamento Seguro</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-comprar-mapasmentaiscarreiraspoliciais/">Compre com Desconto → MAPAS MENTAIS CARREIRAS POLICIAIS</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/mbguitar-academy-acesso-imediato/">Promoção MB GUITAR ACADEMY [APROVEITE]</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/melannunage-desconto/">Melannun Age funciona? - [Melhor Custo-Benefício]</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-metodomonster/">Método Monster → (PROMOÇÃO de R$ 297,00 por R$ 97,00)</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-comprar-metodotrader-milionario/">MÉTODO TRADER MILIONÁRIO funciona? |【O mais completo da internet】</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/net-milionario-funciona/">NET MILIONÁRIO Funciona? → Testado e Aprovado</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/power-capsturbo-o-que-e-para-que-serve/">Comprar PowerCaps Turbo agora</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/profissao-home-office-disponivel-com-desconto/">PROFISSÃO HOME OFFICE Em Promoção</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/remunera-365-20-oferece-desconto/">Promoção Remunera 365 [SÓ HOJE]</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/robo-afiliado-com-desconto/">Robô Afiliado oferece 25% de desconto</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/roboda-loto-e-confiavel-varios-bonus/">ROBÔ DA LOTO funciona? | [Promoção Relâmpago 10% OFF]</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/roboinvestidortrader-pague-menos/">[CONFIRA!] Robô Investidor Trader</a>
+      </h2>
+      <p>26/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/adquira-o-seu-folixil/">Folixil funciona? (Nova Fórmula Natural)</a>
       </h2>
       <p>23/08/2021</p>
     </li>
@@ -140,7 +428,73 @@
     </li>
     <li>
       <h2>
-        <a href="/adquira-o-seu-folixil/">Folixil funciona? (Nova Fórmula Natural)</a>
+        <a href="/comprar-formuladigitador-online-agora-com-desconto/">Fórmula Digitador Online → De R$ 147,00 por apenas R$ 79,00 em 11x no cartão</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/confira-fornecedores-restritos/">Site Blindado → Fornecedores Restritos</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/cuidado-futebol-trade/">Futebol Trade Funciona? → Melhor Preço</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-growtizze-compre/">Comprar com Segurança - Growtizze</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/pague-menos-guia-do-score/">SCORE EM 7 DIAS Até 50% OFF → DESCONTO</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/acesso-seguro-hidraliso-alisante-de-chuveiro/">HIDRALISO - ALISANTE DE CHUVEIRO Com 76% de desconto! COMPRE AGORA!</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-hotbluecaps-compre/">HotBlue Caps Funciona? - (Acesse o SITE)</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-com-garantia-idiomafelino/">Idioma Felino funciona? - (53% Off)</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/instaboom-promocao-nao-perca/">[CUIDADO] InstaBoom</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/cuidado-iq-agenda/">IQ Agenda Funciona? | Matricule-se JÁ por apenas R$ 197,00/Mês</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/libidxtreme-caps-o-que-e-para-que-serve/">O que é LIBIDXTREME e para quem serve?</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-liftcha/">Promoção Lift Chá [APENAS HOJE]</a>
       </h2>
       <p>23/08/2021</p>
     </li>
@@ -243,6 +597,12 @@
     <li>
       <h2>
         <a href="/promocao-magnifiqueparis-so-hoje/">Magnifique Paris Funciona? - [Oferta]</a>
+      </h2>
+      <p>23/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/xblue-onde-comprar-o-que-e/">[ACESSO IMEDIATO] XBLUE</a>
       </h2>
       <p>23/08/2021</p>
     </li>
